Set correct column gap in sponsor description

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -509,7 +509,7 @@ header {
   }
 
   .description {
-    @include content-columns(2);
+    @include content-columns(2, 2 * $gridColumnWidth);
 
     margin-bottom: 0;      
   }
